site/docs/v0.4.1/zh/components/ribbon.mdx
# Ribbon 功能区

Ribbon 把标签页导航与分组应用命令组合在一起。该模式源自 A3S Office，并被泛化到编辑器、拓扑工具与运维工作台。

<Preview>
  <div class="w-full overflow-hidden border border-border bg-[var(--a3s-bg)]" data-ribbon-primary-demo="zh">
    <div class="ribbon tabs w-full" data-accent="blue">
    <div role="tablist" aria-label="文档命令" data-ribbon-tablist>
      <button
        type="button"
        role="tab"
        id="ribbon-home-tab"
        aria-selected="true"
        aria-controls="ribbon-home"
        data-ribbon-tab="home"
      >
        首页
      </button>
      <button
        type="button"
        role="tab"
        id="ribbon-insert-tab"
        aria-selected="false"
        aria-controls="ribbon-insert"
        tabindex="-1"
        data-ribbon-tab="insert"
      >
        插入
      </button>
      <button
        type="button"
        role="tab"
        id="ribbon-review-tab"
        aria-selected="false"
        aria-controls="ribbon-review"
        tabindex="-1"
        data-ribbon-tab="review"
      >
        审阅
      </button>
    </div>
    <div role="tabpanel" id="ribbon-home" aria-labelledby="ribbon-home-tab" data-ribbon-panel="home">
      <fieldset data-ribbon-group>
        <legend>Clipboard</legend>
        <div data-ribbon-controls>
          <button
            type="button"
            class="btn"
            data-size="icon-sm"
            data-variant="ghost"
            aria-label="Paste"
          >
            <svg
              aria-hidden="true"
              width="16"
              height="16"
              viewBox="0 0 24 24"
              fill="none"
              stroke="currentColor"
              stroke-width="1.8"
              stroke-linecap="round"
              stroke-linejoin="round"
            >
              <rect x="5" y="4" width="14" height="17" rx="2" />
              <path d="M9 4V2h6v2M8 12h8M12 8v8" />
            </svg>
          </button>
          <button
            type="button"
            class="btn"
            data-size="icon-sm"
            data-variant="ghost"
            aria-label="Copy"
          >
            <svg
              aria-hidden="true"
              width="16"
              height="16"
              viewBox="0 0 24 24"
              fill="none"
              stroke="currentColor"
              stroke-width="1.8"
              stroke-linecap="round"
              stroke-linejoin="round"
            >
              <rect x="8" y="8" width="11" height="11" rx="2" />
              <path d="M16 8V5a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v9a2 2 0 0 0 2 2h3" />
            </svg>
          </button>
        </div>
      </fieldset>
      <fieldset data-ribbon-group>
        <legend>Font</legend>
        <div data-ribbon-controls>
          <button
            type="button"
            class="btn font-bold"
            data-size="icon-sm"
            data-variant="ghost"
            aria-label="Bold"
          >
            B
          </button>
          <button
            type="button"
            class="btn italic"
            data-size="icon-sm"
            data-variant="ghost"
            aria-label="Italic"
          >
            I
          </button>
          <button
            type="button"
            class="btn underline"
            data-size="icon-sm"
            data-variant="ghost"
            aria-label="Underline"
          >
            U
          </button>
        </div>
      </fieldset>
      <fieldset data-ribbon-group>
        <legend>Paragraph</legend>
        <div data-ribbon-controls>
          <button
            type="button"
            class="btn"
            data-size="icon-sm"
            data-variant="ghost"
            aria-label="Align left"
          >
            <svg
              aria-hidden="true"
              width="16"
              height="16"
              viewBox="0 0 24 24"
              fill="none"
              stroke="currentColor"
              stroke-width="1.8"
              stroke-linecap="round"
              stroke-linejoin="round"
            >
              <path d="M4 6h16M4 10h10M4 14h16M4 18h10" />
            </svg>
          </button>
          <button
            type="button"
            class="btn"
            data-size="icon-sm"
            data-variant="ghost"
            aria-label="Bulleted list"
          >
            <svg
              aria-hidden="true"
              width="16"
              height="16"
              viewBox="0 0 24 24"
              fill="none"
              stroke="currentColor"
              stroke-width="1.8"
              stroke-linecap="round"
              stroke-linejoin="round"
            >
              <path d="M9 6h11M9 12h11M9 18h11" />
              <circle cx="4" cy="6" r="1" />
              <circle cx="4" cy="12" r="1" />
              <circle cx="4" cy="18" r="1" />
            </svg>
          </button>
        </div>
      </fieldset>
    </div>
    <div
      role="tabpanel"
      id="ribbon-insert"
      aria-labelledby="ribbon-insert-tab"
      data-ribbon-panel="insert"
      hidden
    >
      <fieldset data-ribbon-group>
        <legend>内容</legend>
        <div data-ribbon-controls>
          <button type="button" class="btn" data-size="sm" data-variant="ghost">
            表
          </button>
          <button type="button" class="btn" data-size="sm" data-variant="ghost">
            图片
          </button>
          <button type="button" class="btn" data-size="sm" data-variant="ghost">
            链接
          </button>
        </div>
      </fieldset>
    </div>
    <div
      role="tabpanel"
      id="ribbon-review"
      aria-labelledby="ribbon-review-tab"
      data-ribbon-panel="review"
      hidden
    >
      <fieldset data-ribbon-group>
        <legend>评论</legend>
        <div data-ribbon-controls>
          <button type="button" class="btn" data-size="sm" data-variant="ghost">
            评论
          </button>
          <button type="button" class="btn" data-size="sm" data-variant="ghost">
            跟踪更改
          </button>
        </div>
      </fieldset>
    </div>
    </div>
    <div
      class="grid min-h-40 place-items-center text-sm text-muted-foreground"
      data-editor-canvas
    >
      文档画布
    </div>
  </div>
</Preview>

## 用法

加载 Tabs 控制器，并在根节点同时使用 `ribbon` 与 `tabs` 类名。

```html
<div class="ribbon tabs" data-accent="blue">
  <div role="tablist" aria-label="Editor commands">...</div>
  <div role="tabpanel">
    <fieldset data-ribbon-group>
      <legend>Clipboard</legend>
      ...
    </fieldset>
  </div>
</div>
```

### 参数

| 参数                                | 可选值                              | 默认   | 目的                   |
| ----------------------------------- | ----------------------------------- | ------ | ---------------------- |
| `data-accent`                       | `blue`、`green`、`orange`、`purple` | `blue` | 兼容性产品重音；`purple` 映射到 A3S 蓝 |
| `role="tablist"`                    | —                                   | 必填   | 选项卡导航容器         |
| `aria-selected`                     | `true`、`false`                     | 必填   | 活动选项卡状态         |
| `aria-controls` / `aria-labelledby` | 元素 ID                             | 必填   | 关联选项卡和面板       |
| `data-ribbon-group`                 | —                                   | 必填   | 命令组布局             |
| `data-ribbon-controls`              | —                                   | 推荐   | 将命令与组图例上方对齐 |
| `--ribbon-tabs-height`              | CSS 长度                            | `2.25rem` | 固定标签栏高度       |
| `--ribbon-panel-height`             | CSS 长度                            | `4.625rem` | 固定命令区高度       |
| `--ribbon-group-height`             | CSS 长度                            | `4.0625rem` | 固定命令组高度       |

## 状态和变体

当前 A3S 工作区使用蓝色。绿色和橙色保留给旧版文档类型集成，兼容值 `purple` 也映射为 A3S 蓝。禁用的标签页与命令使用原生 `disabled`。默认 36 像素标签栏与 74 像素命令区保持紧凑；窄视口保持标签不收缩并允许横向滚动。

### JavaScript API

功能区行为来自 [Tabs](/components/tabs) 控制器。`window.a3sUI.refresh(ribbon)` 重新扫描动态添加的选项卡。不需要功能区特定的 JavaScript。

## 可访问性

使用完整的标签键盘合约。使用 `<fieldset>` 和可见或仅屏幕阅读器的 `<legend>` 对命令进行分组。如果色带变得太密，请允许水平滚动，而不是将标签缩小到可见尺寸以下。

## React

```tsx
import { Ribbon, useRibbon } from "@a3s-lab/ui/react";

export function Example() {
  const control = useRibbon();
  return (
    <Ribbon ref={control.ref} className="tabs" data-accent="blue">
      <div role="tablist" aria-label="Editor commands">
        <button type="button" role="tab" aria-selected="true">
          开始
        </button>
      </div>
      <div role="tabpanel">
        <fieldset data-ribbon-group="">
          <legend>Clipboard</legend>
          <button type="button">粘贴</button>
          <button type="button">复制</button>
        </fieldset>
      </div>
    </Ribbon>
  );
}
```

`useRibbon` 订阅清单中声明的 DOM 事件，并且只调用清单中公开的方法。适配器不创建另一套框架专属状态。

## Vue

```vue
<script setup lang="ts">
import { Ribbon, useRibbon } from "@a3s-lab/ui/vue";

const control = useRibbon();
const componentRef = control.componentRef;
</script>

<template>
  <Ribbon ref="componentRef" class="tabs" data-accent="blue">
    <div role="tablist" aria-label="Editor commands">
      <button type="button" role="tab" aria-selected="true">开始</button>
    </div>
    <div role="tabpanel">
      <fieldset data-ribbon-group="">
        <legend>Clipboard</legend>
        <button type="button">粘贴</button><button type="button">复制</button>
      </fieldset>
    </div>
  </Ribbon>
</template>
```

`useRibbon` 订阅清单中声明的 DOM 事件，并且只调用清单中公开的方法。适配器不创建另一套框架专属状态。
